Release 17.03.0 (pending)
==========================

API additions:
- LMS_GPIODirRead
- LMS_GPIODirWrite
- LMS_CalibrateInternalADC
- LMS_CalibrateAnalogRSSIDC
- LMS_CalibrateRP_BIAS
- LMS_CalibrateTxGain
- LMS_SetClockFreqWithSpurCancelation

General changes:
- LimeSDR v1.4 updated to r2.8 gateware
- GPIO support in SoapyLM7 module
- Library level logging support
- Speed up x640,x641 spi
- FFTviewer: add checkbox for RX->TX loopback control
- Merged major MCU based calibrations update

Release 17.02.2 (2017-04-30)
==========================

- Fixed register typo in LMS7002M::SetTxDCOffset()
- Added option defaults for stream args in SoapyLMS7
- Fixed LMS7002M::GetPathRFE() currently selected path

Release 17.02.1 (2017-03-11)
==========================

- Fix ILimeSDRStreaming fifo size power of two issue

Release 17.02.0 (2017-03-07)
==========================

- Automatic phase configuration for DIQ clocks
- Fix FFT avg amplitudes when MIMO is enabled
- Fix free usb device list for STREAM connection
- Device handle display and label improvements
- General fixes for LimeSDR-PCIE support
- Add gain control with dB value (for RX only)

Release 17.01.1 (2017-02-03)
==========================

- Updated LimeSDR rev1.4 gateware images to version 2.6
- LMS7 API: Fix CGEN clock config in LMS_SetClockFreq()
- Fix debug assertion in FFT viewer wx format string
- LMS7 API: Fix NCO down/upconvert for new chip rev
- Fix NCO tuning sign in SoapyLMS7 for LMS7 silicon rev
- Fixed bug in downloadImageResource() call for windows
- Updated LimeSDR images for USB enumeration problem fix

Release 17.01.0 (2017-01-22)
==========================

- Support filter by serial for ConnectionSTREAM
- Added resource location API and image update API
- configure LML clock phases based on interface freq
- LimeSDR: detect reference clock presence on connect
- Set CMIX setting in calib/tune based on chip version

Release 16.12.1 (2017-01-22)
==========================
