@@ -22,11 +22,14 @@ using namespace lime;
 #define dirName ((direction == SOAPY_SDR_RX)?"Rx":"Tx")
 
 // arbitrary upper limit for CGEN automatic tune
+#define MIN_CGEN_RATE 6.4e6
 #define MAX_CGEN_RATE 640e6
+#define CGEN_DEADZONE_LO 450e6
+#define CGEN_DEADZONE_HI 491.5e6
 
 //reasonable limits when advertising the rate
 #define MIN_SAMP_RATE 1e5
-#define MAX_SAMP_RATE 60e6
+#define MAX_SAMP_RATE 65e6
 
 /*******************************************************************
  * Constructor/destructor
@@ -655,6 +658,13 @@ SoapySDR::RangeList SoapyLMS7::getFrequencyRange(const int direction, const size
  * Sample Rate API
  ******************************************************************/
 
+static bool cgenRatePossible(const double rate)
+{
+    if (rate > MAX_CGEN_RATE) return false;
+    if (rate > CGEN_DEADZONE_LO and rate < CGEN_DEADZONE_HI) return false; //avoid range where CGEN does not lock
+    return true;
+}
+
 static double calculateClockRate(
     const int adcFactorRx,
     const int dacFactorTx,
@@ -668,8 +678,7 @@ static double calculateClockRate(
     for (int decim = 2; decim <= 32; decim *= 2)
     {
         const double rateClock = rateRx*decim*adcFactorRx;
-        if (rateClock > MAX_CGEN_RATE) continue;
-        if (rateClock > 450e6 && rateClock < 491.5e6) continue; //avoid range where CGEN does not lock
+        if (not cgenRatePossible(rateClock)) continue;
         if (rateClock < bestClockRate) continue;
         for (int interp = 2; interp <= 32; interp *= 2)
         {
@@ -792,6 +801,7 @@ std::vector<double> SoapyLMS7::_getEnumeratedRates(const int direction, const si
         for (int iTx = 32; iTx >= 2; iTx /= 2)
         {
             const double clockRate = txRate*dacFactor*iTx;
+            if (not cgenRatePossible(clockRate)) continue;
             for (int iRx = 32; iRx >= 2; iRx /= 2)
             {
                 const double rxRate = clockRate/(adcFactor*iRx);
@@ -847,7 +857,8 @@ SoapySDR::RangeList SoapyLMS7::getSampleRateRange(const int direction, const siz
     //no enumerated rates? full continuous range is available
     if (rates.empty())
     {
-        ranges.push_back(SoapySDR::Range(MIN_SAMP_RATE, MAX_SAMP_RATE));
+        ranges.push_back(SoapySDR::Range(MIN_SAMP_RATE, CGEN_DEADZONE_LO/8));
+        ranges.push_back(SoapySDR::Range(CGEN_DEADZONE_HI/8, MAX_SAMP_RATE));
     }
 
     //normal list of enumerated rates becomes ranges with start == stop
@@ -952,6 +963,14 @@ double SoapyLMS7::getMasterClockRate(void) const
     std::unique_lock<std::recursive_mutex> lock(_accessMutex);
     //assume same rate for all RFIC in this wrapper
     return _rfics.front()->GetFrequencyCGEN();
+}
+
+SoapySDR::RangeList SoapyLMS7::getMasterClockRates(void) const
+{
+    SoapySDR::RangeList r;
+    r.push_back(SoapySDR::Range(MIN_CGEN_RATE, CGEN_DEADZONE_LO));
+    r.push_back(SoapySDR::Range(CGEN_DEADZONE_HI, MAX_CGEN_RATE));
+    return r;
 }
 
 /*******************************************************************
